Added a form contact on kontakti.html file Modification of modals. Modification on file kontakti. On file register_form added the forms registration. Added index.php.

--- a/kontakti.html
+++ b/kontakti.html
@@ -15,19 +15,19 @@
 <body>
 
 <!--Navbar -->
-<nav id="navbar" class="navbar navbar-expand-sm">
-    <a class="navbar-brand text-dark" href="#">♚ duapune.com</a>
+<nav id="navbar" class="navbar bg-dark fixed-top navbar-expand-sm">
+    <a class="navbar-brand text-white" href="#">♚ duapune.com</a>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link text-dark " href="#"><strong>Rreth nesh</strong></a>
+            <a class="nav-link text-white" href="#"><strong>Rreth nesh</strong></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#"><b>Sherbime</b></a>
+            <a class="nav-link text-white" href="#"><b>Sherbime</b></a>
         </li>
 
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
                 <b>Veprime te shpejta</b>
             </a>
             <div class="dropdown-menu">
@@ -39,7 +39,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
                 <b>Na kontaktoni</b>
             </a>
             <div class="dropdown-menu">
@@ -51,15 +51,111 @@
     </ul>
 </nav>
 
+<!--kontaktet dhe maps-->
 <div>
-    <div class="row">
-        <div class="col-4">
-            <h1>Na Kontaktoni</h1>
-            <form action="">
+    <div class="pt-5 row">
+        <div class="p-5 col-5">
 
-            </form>
+            <!--Section: Contact v.2-->
+            <section class="mb-4">
+
+                <!--Section heading-->
+                <h2 class="h1-responsive font-weight-bold text-center my-4">Na Kontaktoni</h2>
+                <!--Section description-->
+                <p class="text-center w-responsive mx-auto mb-5">A keni ndonje pyetje? Ju lutemi mos hezitoni te na kontaktoni menjehere.
+                    Stafi jone do te pergjigjet ne me pak se nje ore per tju ardhur ne ndihme.</p>
+
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-9 mb-md-0 mb-5">
+                        <form id="contact-form" name="contact-form" action="index.php" method="POST">
+
+                            <!--Grid row-->
+                            <div class="row">
+
+                                <!--Grid column-->
+                                <div class="col-md-6">
+                                    <div class="md-form mb-0">
+                                        <i class="fas fa-user prefix grey-text"></i>
+                                        <input type="text" id="name" name="name" class="form-control">
+                                        <label for="name" class="">Emri</label>
+                                    </div>
+                                </div>
+                                <!--Grid column-->
+
+                                <!--Grid column-->
+                                <div class="col-md-6">
+                                    <div class="md-form mb-0">
+                                        <i class="fas fa-envelope prefix grey-text"></i>
+                                        <input type="text" id="email" name="email" class="form-control">
+                                        <label for="email" class="">emaili</label>
+                                    </div>
+                                </div>
+                                <!--Grid column-->
+
+                            </div>
+                            <!--Grid row-->
+
+                            <!--Grid row-->
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="md-form mb-0">
+                                        <i class="fas fa-tag prefix grey-text"></i>
+                                        <input type="text" id="subject" name="subject" class="form-control">
+                                        <label for="subject" class="">Subjekti</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Grid row-->
+
+                            <!--Grid row-->
+                            <div class="row">
+
+                                <!--Grid column-->
+                                <div class="col-md-12">
+
+                                    <div class="md-form">
+                                        <i class="fas fa-pencil-alt prefix grey-text"></i>
+                                        <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                                        <label for="message">Mesazhi juaj</label>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!--Grid row-->
+
+                        </form>
+
+                        <div class="text-center text-md-left">
+                            <a id="send" class="btn btn-primary" onclick="validateForm();">Dergo</a>
+                        </div>
+                        <div class="status"></div>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-3 text-center">
+                        <ul class="list-unstyled mb-0">
+                            <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                                <p>Tirane, Selite 1060, AL</p>
+                            </li>
+
+                            <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                                <p>+ 355 84 88 011</p>
+                            </li>
+
+                            <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                                <p>kacarudi@gmail.com</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                </div>
+            </section>
         </div>
-        <div class="col-8">
+
+        <div class="p-5 col-7">
             <!--<h1>My First Google Map</h1>-->
             <div class="mapouter col-md-12">
                 <div class="gmap_canvas">
@@ -225,5 +321,62 @@
 
 </footer>
 
+<script>
+
+    function validateForm() {
+        var name =  document.getElementById('name').value;
+        if (name == "") {
+            document.querySelector('.status').innerHTML = "Name cannot be empty";
+            return false;
+        }
+        var email =  document.getElementById('email').value;
+        if (email == "") {
+            document.querySelector('.status').innerHTML = "Email cannot be empty";
+            return false;
+        } else {
+            var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+            if(!re.test(email)){
+                document.querySelector('.status').innerHTML = "Email format invalid";
+                return false;
+            }
+        }
+        var subject =  document.getElementById('subject').value;
+        if (subject == "") {
+            document.querySelector('.status').innerHTML = "Subject cannot be empty";
+            return false;
+        }
+        var message =  document.getElementById('message').value;
+        if (message == "") {
+            document.querySelector('.status').innerHTML = "Message cannot be empty";
+            return false;
+        }
+
+        document.getElementById('send').innerHTML = "Sending...";
+        formData = {
+            'name'     : $('input[name=name]').val(),
+            'email'    : $('input[name=email]').val(),
+            'subject'  : $('input[name=subject]').val(),
+            'message'  : $('textarea[name=message]').val()
+        };
+
+
+        $.ajax({
+            url : "http://localhost/rudiphp/index.php",
+            type: "POST",
+            data : formData,
+            success: function(data, textStatus, jqXHR)
+            {
+
+                $('#status').text(data.message);
+                if (data.code) //If mail was sent successfully, reset the form.
+                    $('#contact-form').closest('form').find("input[type=text], textarea").val("");
+            },
+            error: function (jqXHR, textStatus, errorThrown)
+            {
+                $('#status').text(jqXHR);
+            }
+        });
+    }
+</script>
 </body>
 </html>
