--- a/duapune.html
+++ b/duapune.html
@@ -16,19 +16,19 @@
 <body>
 
 <!--Navbar -->
-<nav id="navbar" class="navbar navbar-expand-sm">
-    <a class="navbar-brand text-dark" href="#">♚ duapune.com</a>
+<nav id="navbar" class="navbar bg-dark fixed-top navbar-expand-sm">
+    <a class="navbar-brand text-white" href="#">♚ duapune.com</a>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link text-dark " href="#"><strong>Rreth nesh</strong></a>
+            <a class="nav-link text-white" href="#"><strong>Rreth nesh</strong></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#"><b>Sherbime</b></a>
+            <a class="nav-link text-white" href="#"><b>Sherbime</b></a>
         </li>
 
 <!-- Dropdown -->
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
                 <b>Veprime te shpejta</b>
             </a>
             <div class="dropdown-menu">
@@ -40,7 +40,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
                 <b>Na kontaktoni</b>
             </a>
             <div class="dropdown-menu">
@@ -53,10 +53,10 @@
 </nav>
 
 <!-- Head (Regjistrohu / Identifikohu)-->
-<div class="row text-center " style="background: #0099cb">
+<div class="row text-center mt-5" style="height: 160px; background: #0099cb">
     <div class="col-sm-6 ">
         <div class="bg-#0099cb">
-            <div class="card-body">
+            <div class="card-body pt-5">
                 <div class="btn btn-lg btn-outline-light stretched-link" data-toggle="modal" data-target="#modal_punekerkues"><i class="fas fa-user-tie"></i> Punekerkues</div>
 
                 <!-- Modal -->
@@ -72,7 +72,31 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <div class="col-12 text-center">
+                                    <form method="POST" action="https://(KUR TE KRIJOHET FILE PHP)" accept-charset="UTF-8">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" id="email" placeholder="Adresa Email" name="email">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" id="paswd" placeholder="Fjalekalimi" name="pswd">
+                                        </div>
+                                        <div class="row" >
+                                            <div class="col-6">
+                                                <div class="form-group">
+                                                    <button type="submit" class="btn btn-outline-success">Identifikohu</button>
+                                                </div>
+                                                <div class="clearfix">
+                                                    <input name="remember_me" type="checkbox" id="remember_me" value="true">
+                                                    <label for="remember_me" class="pull-left checkbox-inline">Me mbaj mend</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-6">
+                                                <label><a class="btn btn-outline-primary" href="register_form.html">Regjistrohu</a></label>
+                                            </div>
+                                        </div>
+
+                                    </form>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-primary">Save changes</button>
@@ -88,8 +112,10 @@
     </div>
     <div class="col-sm-6">
         <div class="bg-#0099cb">
-            <div class="card-body">
-                <div class="btn btn-lg btn-outline-light stretched-link" data-toggle="modal" data-target="#modal_punedhenes"><i class="fas fa-briefcase"></i> Punedhenes</div><!-- Modal -->
+            <div class="card-body pt-5">
+                <div class="btn btn-lg btn-outline-light stretched-link" data-toggle="modal" data-target="#modal_punedhenes"><i class="fas fa-briefcase"></i> Punedhenes</div>
+
+                <!-- Modal -->
                 <div class="modal fade" id="modal_punedhenes" role="dialog">
                     <div class="modal-dialog">
 
@@ -102,7 +128,30 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <div class="col-12 text-center">
+                                    <form method="POST" action="https://(KUR TE KRIJOHET FILE PHP)" accept-charset="UTF-8">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" id="email" placeholder="Adresa Email" name="email">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" id="paswd" placeholder="Fjalekalimi" name="pswd">
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <div class="form-group">
+                                                    <button type="submit" class="btn btn-outline-success">Identifikohu</button>
+                                                </div>
+                                                <div class="clearfix">
+                                                    <input name="remember_me" type="checkbox" id="remember_me" value="true">
+                                                    <label for="remember_me" class="pull-left checkbox-inline">Me mbaj mend</label>
+                                                </div>
+                                            </div>
+                                            <div class="col-6">
+                                                <label><a class="btn btn-outline-primary" href="register_form.html">Regjistrohu</a></label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-primary">Save changes</button>
