--- a/register_form.html
+++ b/register_form.html
@@ -15,19 +15,19 @@
 <body>
 
 <!--Navbar -->
-<nav class="navbar navbar-expand-sm  ">
-    <a class="navbar-brand text-dark" href="#">♚ duapune.com</a>
+<nav id="navbar" class="navbar bg-dark fixed-top navbar-expand-sm">
+    <a class="navbar-brand text-white" href="#">♚ duapune.com</a>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link text-dark " href="#"><strong>Rreth nesh</strong></a>
+            <a class="nav-link text-white" href="#"><strong>Rreth nesh</strong></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#"><b>Sherbime</b></a>
+            <a class="nav-link text-white" href="#"><b>Sherbime</b></a>
         </li>
 
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
                 <b>Veprime te shpejta</b>
             </a>
             <div class="dropdown-menu">
@@ -39,11 +39,11 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
                 <b>Na kontaktoni</b>
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Na kontaktoni</a>
+                <a class="dropdown-item" href="kontakti.html">Na kontaktoni</a>
                 <a class="dropdown-item" href="#">Mendimi Juaj</a>
                 <a class="dropdown-item" href="#">Trego historine tende</a>
             </div>
@@ -53,7 +53,7 @@
 <hr>
 
 <!--Form Register-->
-<section class="main-header-block register">
+<section class="pt-5 main-header-block register">
     <div class="container register-form">
         <h1 class="register-title text-center">Regjistrohu në sistem</h1><br>
         <div class="row">
