Modification on head Modification on the modals (added forgot password and a register button)

--- a/duapune.html
+++ b/duapune.html
@@ -32,10 +32,10 @@
                 <b>Veprime te shpejta</b>
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#"><b>Punekerkues</b></a>
+                <a class="dropdown-item" disabled=""><b>Punekerkues</b></a>
                 <a class="dropdown-item" href="#">Krijo/Shto CV</a>
                 <a class="dropdown-item" href="#">Shembull CV-je</a>
-                <a class="dropdown-item" href="#"><b>Punedhenes</b></a>
+                <a class="dropdown-item" disabled=""><b>Punedhenes</b></a>
                 <a class="dropdown-item" href="#">Posto pune</a>
             </div>
         </li>
@@ -80,26 +80,26 @@
                                         <div class="form-group">
                                             <input type="password" class="form-control" id="paswd" placeholder="Fjalekalimi" name="pswd">
                                         </div>
-                                        <div class="row" >
-                                            <div class="col-6">
-                                                <div class="form-group">
-                                                    <button type="submit" class="btn btn-outline-success">Identifikohu</button>
+                                        <div class="row">
+                                                <div class="col-6 float-left">
+                                                    <div class="form-group">
+                                                        <button type="submit" class="btn btn-outline-success">Identifikohu</button>
+                                                    </div>
+                                                    <div class="clearfix">
+                                                        <input name="remember_me" type="checkbox" id="remember_me" value="true">
+                                                        <label for="remember_me" class="pull-left checkbox-inline">Me mbaj mend</label>
+                                                    </div>
                                                 </div>
-                                                <div class="clearfix">
-                                                    <input name="remember_me" type="checkbox" id="remember_me" value="true">
-                                                    <label for="remember_me" class="pull-left checkbox-inline">Me mbaj mend</label>
+                                                <div class="col-6 float-right">
+                                                    <a href="#"><small>Keni harruar paswordin?</small></a>
                                                 </div>
                                             </div>
-                                            <div class="col-6">
-                                                <label><a class="btn btn-outline-primary" href="register_form.html">Regjistrohu</a></label>
-                                            </div>
-                                        </div>
-
                                     </form>
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <a class="float-left mr-5" href=""><small>Nuk keni llogari ne Duapune.com?</small></a>
+                                <label><a class="btn btn-primary" href="register_form.html">Regjistrohu</a></label>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                             <input type="password" class="form-control" id="paswd" placeholder="Fjalekalimi" name="pswd">
                                         </div>
                                         <div class="row">
-                                            <div class="col-6">
+                                            <div class="col-6 float-left">
                                                 <div class="form-group">
                                                     <button type="submit" class="btn btn-outline-success">Identifikohu</button>
                                                 </div>
@@ -146,15 +146,16 @@
                                                     <label for="remember_me" class="pull-left checkbox-inline">Me mbaj mend</label>
                                                 </div>
                                             </div>
-                                            <div class="col-6">
-                                                <label><a class="btn btn-outline-primary" href="register_form.html">Regjistrohu</a></label>
+                                            <div class="col-6 float-right">
+                                                <a href="#"><small>Keni harruar paswordin?</small></a>
                                             </div>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <a class="float-left mr-5" href=""><small>Nuk keni llogari ne Duapune.com?</small></a>
+                                <label><a class="btn btn-primary" href="register_form.html">Regjistrohu</a></label>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
