--- a/duapune.html
+++ b/duapune.html
@@ -99,7 +99,85 @@
                             </div>
                             <div class="modal-footer">
                                 <a class="float-left mr-5" href=""><small>Nuk keni llogari ne Duapune.com?</small></a>
-                                <label><a class="btn btn-primary" href="register_form.html">Regjistrohu</a></label>
+                                <label><a href="" class="btn btn-primary" data-toggle="modal" data-target="#sideModalTLInfo">Regjistrohu</a></label>
+
+                                <!-- Central Modal Medium Info -->
+                                <div class="modal fade left" id="sideModalTLInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog modal-notify modal-info modal-side modal-top-left" role="document">
+                                        <!--Content-->
+                                        <div class="modal-content">
+                                            <!--Header-->
+                                            <div class="modal-header">
+                                                <p class="heading lead">Regjistrohu si Punekerkues</p>
+
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true" class="white-text">&times;</span>
+                                                </button>
+                                            </div>
+
+                                            <!--Body-->
+                                            <div class="modal-body">
+
+                                                <!-- Card -->
+                                                <div class="card">
+
+                                                    <!-- Card body -->
+                                                    <div class="card-body">
+
+                                                        <!-- Material form register -->
+                                                        <form>
+                                                            <p class="h4 text-center py-4">Regjistrohu si Punekerkues</p>
+
+                                                            <!-- Material input text -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-user prefix grey-text"></i>
+                                                                <input type="text" id="materialFormCardNameEx" class="form-control">
+                                                                <label for="materialFormCardNameEx" class="font-weight-light">Emri</label>
+                                                            </div>
+
+                                                            <!-- Material input email -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-envelope prefix grey-text"></i>
+                                                                <input type="email" id="materialFormCardEmailEx" class="form-control">
+                                                                <label for="materialFormCardEmailEx" class="font-weight-light">Email</label>
+                                                            </div>
+
+                                                            <!-- Material input email -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-exclamation-triangle prefix grey-text"></i>
+                                                                <input type="email" id="materialFormCardConfirmEx" class="form-control">
+                                                                <label for="materialFormCardConfirmEx" class="font-weight-light">Konfirmoni emailin</label>
+                                                            </div>
+
+                                                            <!-- Material input password -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-lock prefix grey-text"></i>
+                                                                <input type="password" id="materialFormCardPasswordEx" class="form-control">
+                                                                <label for="materialFormCardPasswordEx" class="font-weight-light">Paswordi</label>
+                                                            </div>
+
+                                                        </form>
+                                                        <!-- Material form register -->
+
+                                                    </div>
+                                                    <!-- Card body -->
+
+                                                </div>
+                                                <!-- Card -->
+                                            </div>
+
+                                            <!--Footer-->
+                                            <div class="modal-footer justify-content-center">
+                                                <a href="" class="btn btn-outline-primary" data-toggle="modal">Regjistrohu</a>
+                                                <a type="button" class="btn btn-outline-danger " data-dismiss="modal">Jo, faleminderit</a>
+                                            </div>
+                                        </div>
+                                        <!--/.Content-->
+                                    </div>
+                                </div>
+                                <!-- Central Modal Medium Info-->
+
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
@@ -155,7 +233,85 @@
                             </div>
                             <div class="modal-footer">
                                 <a class="float-left mr-5" href=""><small>Nuk keni llogari ne Duapune.com?</small></a>
-                                <label><a class="btn btn-primary" href="register_form.html">Regjistrohu</a></label>
+                                <label><a href="" class="btn btn-primary" data-toggle="modal" data-target="#sideModalTLInfo2">Regjistrohu</a></label>
+
+                                <!-- Central Modal Medium Info -->
+                                <div class="modal fade left" id="sideModalTLInfo2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog modal-notify modal-info modal-side modal-top-left" role="document">
+                                        <!--Content-->
+                                        <div class="modal-content">
+                                            <!--Header-->
+                                            <div class="modal-header">
+                                                <p class="heading lead">Regjistrohu si Punedhenes</p>
+
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true" class="white-text">&times;</span>
+                                                </button>
+                                            </div>
+
+                                            <!--Body-->
+                                            <div class="modal-body">
+
+                                                <!-- Card -->
+                                                <div class="card">
+
+                                                    <!-- Card body -->
+                                                    <div class="card-body">
+
+                                                        <!-- Material form register -->
+                                                        <form>
+                                                            <p class="h4 text-center py-4">Regjistrohu si Punedhenes</p>
+
+                                                            <!-- Material input text -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-user prefix grey-text"></i>
+                                                                <input type="text" id="emripunedhenesit" class="form-control">
+                                                                <label for="emripunedhenesit" class="font-weight-light">Emri</label>
+                                                            </div>
+
+                                                            <!-- Material input email -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-envelope prefix grey-text"></i>
+                                                                <input type="email" id="emailpunedhenesit" class="form-control">
+                                                                <label for="emailpunedhenesit" class="font-weight-light">Email</label>
+                                                            </div>
+
+                                                            <!-- Material input email -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-exclamation-triangle prefix grey-text"></i>
+                                                                <input type="email" id="emailConfirm" class="form-control">
+                                                                <label for="emailConfirm" class="font-weight-light">Konfirmoni emailin</label>
+                                                            </div>
+
+                                                            <!-- Material input password -->
+                                                            <div class="md-form">
+                                                                <i class="fa fa-lock prefix grey-text"></i>
+                                                                <input type="password" id="password" class="form-control">
+                                                                <label for="password" class="font-weight-light">Paswordi</label>
+                                                            </div>
+
+                                                        </form>
+                                                        <!-- Material form register -->
+
+                                                    </div>
+                                                    <!-- Card body -->
+
+                                                </div>
+                                                <!-- Card -->
+                                            </div>
+
+                                            <!--Footer-->
+                                            <div class="modal-footer justify-content-center">
+                                                <a href="" class="btn btn-outline-primary" data-toggle="modal">Regjistrohu</a>
+                                                <a type="button" class="btn btn-outline-danger " data-dismiss="modal">Jo, faleminderit</a>
+                                            </div>
+                                        </div>
+                                        <!--/.Content-->
+                                    </div>
+                                </div>
+                                <!-- Central Modal Medium Info-->
+
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
