Modification on modals Inserted modal(sing up form / registrohu) inside modals

--- a/duapune.html
+++ b/duapune.html
@@ -109,7 +109,7 @@
                                         <div class="modal-content">
                                             <!--Header-->
                                             <div class="modal-header">
-                                                <p class="heading lead">Regjistrohu si Punekerkues</p>
+                                                <p class="heading lead"><b>Regjistrohu si Punekerkues</b></p>
 
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -127,7 +127,6 @@
 
                                                         <!-- Material form register -->
                                                         <form>
-                                                            <p class="h4 text-center py-4">Regjistrohu si Punekerkues</p>
 
                                                             <!-- Material input text -->
                                                             <div class="md-form">
@@ -243,7 +242,7 @@
                                         <div class="modal-content">
                                             <!--Header-->
                                             <div class="modal-header">
-                                                <p class="heading lead">Regjistrohu si Punedhenes</p>
+                                                <p class="heading lead"><b>Regjistrohu si Punedhenes</b></p>
 
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -261,7 +260,6 @@
 
                                                         <!-- Material form register -->
                                                         <form>
-                                                            <p class="h4 text-center py-4">Regjistrohu si Punedhenes</p>
 
                                                             <!-- Material input text -->
                                                             <div class="md-form">
