--- a/kontakti.html
+++ b/kontakti.html
@@ -16,7 +16,7 @@
 
 <!--Navbar -->
 <nav id="navbar" class="navbar bg-dark fixed-top navbar-expand-sm">
-    <a class="navbar-brand text-white" href="#">♚ duapune.com</a>
+    <a class="navbar-brand text-white" href="duapune.html">♚ duapune.com</a>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link text-white" href="#"><strong>Rreth nesh</strong></a>
@@ -69,7 +69,7 @@
 
                     <!--Grid column-->
                     <div class="col-md-9 mb-md-0 mb-5">
-                        <form id="contact-form" name="contact-form" action="index.php" method="POST">
+                        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
                             <!--Grid row-->
                             <div class="row">
@@ -77,7 +77,7 @@
                                 <!--Grid column-->
                                 <div class="col-md-6">
                                     <div class="md-form mb-0">
-                                        <i class="fas fa-user prefix grey-text"></i>
+                                        <i class="fas fa-user"></i>
                                         <input type="text" id="name" name="name" class="form-control">
                                         <label for="name" class="">Emri</label>
                                     </div>
@@ -87,9 +87,9 @@
                                 <!--Grid column-->
                                 <div class="col-md-6">
                                     <div class="md-form mb-0">
-                                        <i class="fas fa-envelope prefix grey-text"></i>
+                                        <i class="fas fa-envelope"></i>
                                         <input type="text" id="email" name="email" class="form-control">
-                                        <label for="email" class="">emaili</label>
+                                        <label for="email" class="">Email</label>
                                     </div>
                                 </div>
                                 <!--Grid column-->
@@ -101,7 +101,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="md-form mb-0">
-                                        <i class="fas fa-tag prefix grey-text"></i>
+                                        <i class="fas fa-tag"></i>
                                         <input type="text" id="subject" name="subject" class="form-control">
                                         <label for="subject" class="">Subjekti</label>
                                     </div>
@@ -116,7 +116,7 @@
                                 <div class="col-md-12">
 
                                     <div class="md-form">
-                                        <i class="fas fa-pencil-alt prefix grey-text"></i>
+                                        <i class="fas fa-comment-alt"></i>
                                         <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
                                         <label for="message">Mesazhi juaj</label>
                                     </div>
@@ -128,7 +128,7 @@
                         </form>
 
                         <div class="text-center text-md-left">
-                            <a id="send" class="btn btn-primary" onclick="validateForm();">Dergo</a>
+                            <a class="btn btn-primary" onclick="validateForm();">Dergo</a>
                         </div>
                         <div class="status"></div>
                     </div>
@@ -151,7 +151,9 @@
                         </ul>
                     </div>
                     <!--Grid column-->
+
                 </div>
+
             </section>
         </div>
 
@@ -321,62 +323,6 @@
 
 </footer>
 
-<script>
-
-    function validateForm() {
-        var name =  document.getElementById('name').value;
-        if (name == "") {
-            document.querySelector('.status').innerHTML = "Name cannot be empty";
-            return false;
-        }
-        var email =  document.getElementById('email').value;
-        if (email == "") {
-            document.querySelector('.status').innerHTML = "Email cannot be empty";
-            return false;
-        } else {
-            var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-            if(!re.test(email)){
-                document.querySelector('.status').innerHTML = "Email format invalid";
-                return false;
-            }
-        }
-        var subject =  document.getElementById('subject').value;
-        if (subject == "") {
-            document.querySelector('.status').innerHTML = "Subject cannot be empty";
-            return false;
-        }
-        var message =  document.getElementById('message').value;
-        if (message == "") {
-            document.querySelector('.status').innerHTML = "Message cannot be empty";
-            return false;
-        }
-
-        document.getElementById('send').innerHTML = "Sending...";
-        formData = {
-            'name'     : $('input[name=name]').val(),
-            'email'    : $('input[name=email]').val(),
-            'subject'  : $('input[name=subject]').val(),
-            'message'  : $('textarea[name=message]').val()
-        };
-
-
-        $.ajax({
-            url : "http://localhost/rudiphp/index.php",
-            type: "POST",
-            data : formData,
-            success: function(data, textStatus, jqXHR)
-            {
-
-                $('#status').text(data.message);
-                if (data.code) //If mail was sent successfully, reset the form.
-                    $('#contact-form').closest('form').find("input[type=text], textarea").val("");
-            },
-            error: function (jqXHR, textStatus, errorThrown)
-            {
-                $('#status').text(jqXHR);
-            }
-        });
-    }
-</script>
+<script></script>
 </body>
 </html>
