--- a/register_form.html
+++ b/register_form.html
@@ -16,7 +16,7 @@
 
 <!--Navbar -->
 <nav id="navbar" class="navbar bg-dark fixed-top navbar-expand-sm">
-    <a class="navbar-brand text-white" href="#">♚ duapune.com</a>
+    <a class="navbar-brand text-white" href="duapune.html">♚ duapune.com</a>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link text-white" href="#"><strong>Rreth nesh</strong></a>
