--- a/register_form.html
+++ b/register_form.html
@@ -246,7 +246,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
-        <a href="#"> duapune.com</a>
+        <a href="duapune.html"> duapune.com</a>
     </div>
     <!-- Copyright -->
 
